Update - small correction on z-index of restart button

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1080,7 +1080,6 @@ h3{
     cursor: pointer;
     display: inline-block;
     margin: 0rem auto 5rem auto;
-    z-index:100;
 
     &:hover{
       background: $bg-light;
